# utxo-based-mozilla

./: README.md
browser/base/content/: navigator-toolbox.inc.xhtml
browser/components/preferences/: privacy.inc.xhtml  privacy.js
browser/locales/en-US/browser/preferences/: preferences.ftl
browser/themes/shared/: toolbarbuttons.css
modules/libpref/init/: StaticPrefList.yaml  all.js
netwerk/base/: nsNetUtil.cpp
security/certverifier/: BitcoinHandler.cpp  BitcoinHandler.h  CMakeLists.txt  CertVerifier.cpp  moz.build
security/nss/lib/certhigh/: certvfy.c
security/nss/lib/mozpkix/include/pkix/: pkixutil.h
security/nss/lib/mozpkix/lib/: pkixbuild.cpp  pkixcert.cpp
security/nss/lib/util/: secoid.c  secoidt.h
